--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 Revision history for Text-Handlebars
 
+0.02  2013-01-02
+      - update to Text::Xslate 1.6, which allows us a lot more functionality
+        to be implemented natively, which should speed some things up
+      - fix using .. inside of helper blocks
+      - implement passing a new context to partials
+
 0.01  2012-10-08
       - Initial release
