--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Text-Handlebars
 
+0.03  2013-03-07
+      - convert to Mouse, since Text::Xslate did
+
 0.02  2013-01-02
       - update to Text::Xslate 1.6, which allows us a lot more functionality
         to be implemented natively, which should speed some things up
