--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Text-Handlebars
 
+0.04  2014-04-16
+      - fix '..' in block helpers (reported by Jörg Prante, RT#94792)
+
 0.03  2013-03-07
       - convert to Mouse, since Text::Xslate did
 
